Allow access to nonpublic members of public types in java.base/java.lang package
Workaround #5576